2012-02-17  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-save-fprop-on-kill): ignore errors.

2012-02-09  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-get-vprop): use the directory of the
	FPROP if we need one for creating a VPROP.

2012-01-09  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-use-fprop-cache): new defcustom
	(clearcase-file-fprop): also use the cache when looking for a
	FPROP.
	(clearcase-save-fprop, clearcase-get-saved-fprop): new fprop
	(vc-clearcase-registered): make sure the fprop is added to the
	file's vc-properties.
	(kill-buffer-hook): add clearcase-file-fprop to the hook.
	(vc-clearcase-unload-hook): remove clearcase-file-fprop when
	unloading.

2011-12-19  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-refresh-files): verify that the
	buffer visits a real file (not a directory) before refreshing.

2011-09-23  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-steal-lock): use "cleartool co
	-usehijack" to claim hijacked files.

2011-09-09  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-dir-status-parse-line): use
	`file-relative-name' to normalize the file name.

2011-07-11  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-dir-status-parse-line): recognize
	missing and secial selection files.
	(vc-clearcase-dir-status): remove the -visible arg from the ls
	comand -- we want info about missing files too
	(vc-clearcase-dir-printer): new function

2011-06-16  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-diff): make sure the *vc-diff*
	buffer is read-only, to enable diff-mode commands.

2011-06-09  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-actb-refresh-on-checkin)
	(ucm-actb-refresh-activity): new functions, called when check-in
	happens
	(ucm-unload-hook): new function.  Ensure the library can be
	unloaded properly.
